--- a/css/base.css
+++ b/css/base.css
@@ -5,31 +5,197 @@ body {
   max-width: 1440px;
   margin: 0 auto;
 }
+
 a {
   text-decoration: none;
   color: #444444;
 }
+
+H1 {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  text-align: center;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #FF8A63;
+  margin-bottom: 0;
+}
+
+H2 {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 36px;
+  line-height: 43px;
+  text-align: center;
+  color: #45525B;
+  margin-bottom: 11px;
+}
+
+H3 {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: center;
+  color: #6F7278;
+  margin-bottom: 30px;
+}
+
 .header {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   padding: 15px 136px;
   display: flex;
   justify-content: space-between;
 }
+
 .logo-header {
   width: 102px;
 }
+
 .nav {
- margin: 10px 0; 
+  margin: 10px 0;
 }
 
 .menu {
-display: flex;
-font-style: normal;
-font-weight: 400;
-font-size: 15px;
-line-height: 16px;
-color: #444444;
+  display: flex;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 16px;
+  color: #444444;
 }
+
 .menu-item {
   margin: 0 15px;
+}
+
+.banner {
+  width: 100%;
+  padding-bottom: 40px;
+}
+
+.we {
+  display: flex;
+  justify-content: space-between;
+}
+
+.we-left {
+  width: 50%;
+  padding-left: 136px;
+  padding-top: 155px;
+  padding-bottom: 155px;
+}
+
+.we-right {
+  width: 50%;
+  padding-right: 136px;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.goal {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #FF8A63;
+}
+
+.goal-text {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 53px;
+  color: #45525B;
+}
+
+.we-text {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 22px;
+  color: #333333;
+  margin-top: 8px;
+}
+
+.we-avtor {
+  display: flex;
+  align-items: center;
+  margin-top: 19px;
+}
+
+.person {
+  margin-left: 8px;
+}
+
+.we-name {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 22px;
+  color: #45525B;
+}
+
+.we-broker {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 17px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #6F7278;
+}
+
+.block1 {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 88px;
+}
+
+.block1-img {
+  width: 480px;
+}
+
+.block1-right {
+  margin-left: 32px;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.block1-plus {
+  margin-bottom: 20px;
+  padding: 21px;
+}
+
+.block1-icon {
+  width: 48px;
+  height: 48px;
+}
+
+.block1-name {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #45525B;
+
+}
+
+.block1-text {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: #6F7278;
+}
+
+.block2 {
+  margin-left: 136px;
+  margin-right: 136px;
 }
