--- a/css/base.css
+++ b/css/base.css
@@ -198,7 +198,17 @@ H3 {
   margin-left: 136px;
   margin-right: 136px;
 }
-.h1 {
+
+.cards {
+  display: flex;
+  justify-content: space-between;
+}
+
+.card {
+  width: 375px;
+}
+
+.card-type {
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
@@ -208,11 +218,112 @@ H3 {
   text-transform: uppercase;
   color: #6f7278;
 }
-.menu {
+
+.card-name {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 28px;
+  text-align: center;
+  color: #45525B;
+}
+
+.card-inside {
+  margin-right: 16px;
+  margin-left: 16px;
+  margin-top: 10px;
+  margin-bottom: 22px;
   display: flex;
+  justify-content: space-between;
+}
+
+.card-in {
+  display: flex;
+  justify-content: space-between;
+}
+
+.card-ico {
+  margin-right: 8px;
+  margin-left: 15px;
+}
+
+.card-in-name {
+
   font-style: normal;
   font-weight: 400;
   font-size: 15px;
   line-height: 16px;
   color: #444444;
+}
+
+.cards-ar {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: 200px;
+  max-width: 200px;
+}
+
+.cards-link {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 21px;
+  color: #45525B;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+.block3 {
+  margin-left: 136px;
+  margin-right: 136px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 200px;
+}
+
+.block4 {
+  margin-left: 136px;
+  margin-right: 136px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.news-type {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 17px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #FF8A63;
+  margin-left: 30px;
+  margin-top: 30px;
+}
+
+.news-title {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #45525B;
+  margin-left: 30px;
+  margin-top: 8px;
+}
+
+.news-date {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #45525B;
+  margin-left: 30px;
+  margin-top: 29px;
+}
+
+.block5 {
+  margin-left: 136px;
+  margin-right: 136px;
+  margin-bottom: 200px;
 }
