--- a/css/base.css
+++ b/css/base.css
@@ -290,6 +290,11 @@ H3 {
   justify-content: space-between;
 }
 
+.block4-card {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
 .news-type {
   font-style: normal;
   font-weight: 400;
@@ -326,4 +331,235 @@ H3 {
   margin-left: 136px;
   margin-right: 136px;
   margin-bottom: 200px;
+}
+
+.slide {
+  display: flex;
+  width: 150%;
+}
+
+.feedback {
+  width: 584px;
+  padding: 34px 31px 30px 39px;
+}
+
+.feedback-star {
+  height: 20px;
+  margin-bottom: 8px;
+}
+
+.feedback-title {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 29px;
+  color: #333333;
+  margin-bottom: 11px;
+}
+
+.feedback-text {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 22px;
+  color: #333333;
+  margin-bottom: 20px;
+}
+
+.feedback-name {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 16px;
+  color: #45525B;
+  border-left: #ff8a63 solid 2px;
+  padding-left: 10px;
+}
+
+.slide-arrows {
+  display: flex;
+  justify-content: end;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+}
+
+.slide-arrow {
+  margin: 5px;
+  border: #52503B solid 2px;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  padding: 18px;
+}
+
+.footer1 {
+  width: 100%;
+  height: 399px;
+  background-color: #45525B;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer1-type {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  text-align: center;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #FAFAFC;
+}
+
+.footer1-title {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 36px;
+  line-height: 43px;
+  text-align: center;
+  color: #FFFFFF;
+  margin-bottom: 11px;
+}
+
+.footer1-text {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: center;
+  color: #FAFAFC;
+  width: 574px;
+  margin-bottom: 20px;
+}
+
+.footer1-button {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 22px;
+  text-align: center;
+  color: #45525B;
+  background: #FFFFFF;
+  border-radius: 6px;
+  padding: 10px 18px;
+  margin: 0 10px;
+}
+
+.footer2 {
+  width: 100%;
+  height: 399px;
+  background-color: #292C32;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer2-logo {
+  height: 58px;
+}
+
+.footer2-menus {
+  margin-top: 75px;
+  display: flex;
+  justify-content: center;
+}
+
+.footer2-menu {
+  width: 220px;
+}
+
+.footer2-menu-title {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #FF8A63;
+  margin-bottom: 9px;
+}
+
+.footer2-menu-item {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 22px;
+  color: #FFFFFF;
+  margin-bottom: 9px;
+}
+
+
+.footer2-subs {
+  width: 458px;
+}
+
+.footer2-subs-text {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 22px;
+  color: #FAFAFC;
+}
+
+.subs-form {
+  width: 458px;
+  height: 53px;
+  background: #F9FAFB;
+  border: 1px solid #E5E7EB;
+  border-radius: 8px;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+
+.subs-email {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 22px;
+  color: #6F7278;
+  margin: auto 34px;
+}
+
+.subs-submit {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 22px;
+  color: #FFFFFF;
+  background: #3A4443;
+  border-radius: 10px;
+  margin: 7px;
+  padding: 8px;
+}
+
+.footer2-bottom {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 27px;
+}
+
+.footer2-rihgts {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 22px;
+  color: #FFFFFF;
+  margin-left: 136px;
+}
+
+.footer2-socials {
+  display: flex;
+  margin-right: 136px;
+}
+
+.social-icon {
+  height: 20px;
+  margin: auto 10px;
 }
